--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "openai": "^4.78.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.0",
     "sentiment": "^5.0.2",
     "starknet-sessions": "^0.0.2",
     "tailwind-merge": "^2.5.4",
